# BASICFASTAPI

./: .env  auth.py  blog.db  config.py  database.py  main.py  models.py  pyproject.toml  requirement.txt  schemas.py  snipppets.txt
routers/: posts.py  users.py
static/: site.webmanifest
static/icons/: 4 number - Search Images.html
static/icons/4 number - Search Images_files/: -i-Z77KEX21A3aGMiLM00tPF01E.br.js.download  ODF.SH4vlqlc8o0mstez9nkJYg  ODF.lMSP6D3mQE322QoI1ir-hg  ODF.zE8xA-ZQcNI8afeA8gFXzQ  OIP(1).Cs6qciD7JeeDpIgO-stNMAHaKC  OIP.-hCHa5yoMp6odSrmxndxowHaKA  OIP.-tw3Q7xw2_VYV4hpUzwLjgHaHa  OIP.0e33sYF3g-wnfEgeoLY8VAHaEK  OIP.0kJt2rGszdcAhh5LsBTX6AHaSh  OIP.1C9dBq4QqufyA70q3AVTgAHaJl  OIP.1cthVszlzsL2WCIkIRewewHaJl  OIP.37Q6HK4Vyd2-03JcRbAQXAHaHa  OIP.4KYgA_Ult4PpSaGjpE-yTAHaMO  OIP.4X-K3Bjgz3Rtzvq4vajWKAHaHa  OIP.5969EvtSr4xuuxqYJ9hoagHaLH  OIP.5OSAyrXd1i4vIJcjHRn23gHaJ_  OIP.5d4bW3QtdoffOT4INDto_QHaHa  OIP.5hnCiCVwH7P_DqrBxLdoEgHaHa  OIP.6qX3GAJjK4frTyTjVD5RcQHaJI  OIP.9QIKvZ-XARSqzdZS73NDCwHaHa  OIP.AkJuocXZFBCj-aFmS4I2kAHaI2  OIP.BtKzfzg0bLLyoLuZFH7VTAHaEK  OIP.C-nV6T9bG2a6u695Ikh1TAHaE8  OIP.Cs6qciD7JeeDpIgO-stNMAHaKC  OIP.D4kKQ2L0_ZYTd-X9QkdkLQHaHa  OIP.DTUrHjUggMgJ_deAfyE9hQHaIh  OIP.DzC9eIvUGHp-SUV-2bhGMgHaHa  OIP.ECdTL8Yjn1RWb2aCBv6PuQHaLG  OIP.G5cdA1m3rlrV5H5Kj0AdQAHaHa  OIP.GzusbNcRfiayGYaFrm-iOwHaHa  OIP.I0DD54WR10vt9XahvnDRmgHaHa  OIP.IgUxCySWPtEuPjMd6_0XqgHaHa  OIP.IwTXPvOqPFPZ6CiiixqaTwHaHa  OIP.JdkeM-J3nlDalKuCEjxTiQHaHa  OIP.K5iR21YktezzeAYl5v9BKwHaHa  (+100 more)
templates/: home.html  layout.html  post.html  user_posts.html
